# chemilang

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  MANUAL.md  README.md  clang-tidy.sh  default.nix  docker-compose.yml  format.sh  gencov.sh  install_manifest.txt
.github/workflows/: bracelesselse.yml  dockerimage.yml  format.yml
chemlib/: add.chem  addition.chem  cmp.chem  compare.chem  copy.chem  div.chem  division.chem  ident.chem  link.chem  mult.chem  multiplication.chem  oscillator.chem  sub.chem  subtraction.chem
examples/: conwayreactions.py
src/: composition.cpp  composition.h  conditionalcomposition.cpp  conditionalcomposition.h  driver.cpp  driver.h  frontend.cpp  frontend.h  function.cpp  function.h  main.cpp  module.cpp  module.h  modulecomposition.cpp  modulecomposition.h  parser.yy  scalarcomposition.cpp  scalarcomposition.h  scanner.h  scanner.l  typedefs.h
tests/: basictest.cpp  frontendtest.cpp  functiontest.cpp  moduletest.cpp  testall.cpp
tests/chemfiles/: include1.chem  include2.chem
